--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8">
     <title>AirBnB Clone</title>
   </head>
   <body style="margin: 0; padding: 0">
-    <header
-		    style="background-color: #ff0000; height: 70px; width: 100%">
+    <header style="background-color: #ff0000; height: 70px; width: 100%">
     </header>
     <footer
       style="background-color: #00ff00;
